Update NCIT test file.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>